# robot_pose

./: CHANGELOG.rst  CMakeLists.txt  package.xml
gazebo_fake_odom/: CMakeLists.txt  package.xml
launch/: fake_odom.launch
src/: distance_publisher.cpp  fake_odom_publisher.cpp  pose_publisher.cpp
test/: fake_odom.test  gtest_distance_travelled.cpp  gtest_fake_odom.cpp  gtest_robot_pose.cpp
