<?xml version="1.0"?>
<package>
  <name>robot_pose</name>
  <version>0.0.2</version>
  <description>The robot_pose package</description>
  <maintainer email="procopio.stein@pal-robotics.com">Procópio Stein</maintainer>
  <license>Modified BSD</license>
  <author email="procopio.stein@pal-robotics.com">Procópio Stein</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
</package>